--- a/client/glade/theme.css
+++ b/client/glade/theme.css
@@ -181,8 +181,8 @@ row:hover.contact_row {
 }
 
 .message_box {
-	background-color: #202433;
-	box-shadow: inset 0 0px 3px 0px rgba(0, 0, 0, 0.4);
+	background-color: rgba(94, 94, 94, 0.5);
+	box-shadow: inset 0 0px 1px 1px rgba(0, 0, 0, 0.1);
 	border-radius: 10px;
 	border: none; 
 }
